# agentic-ai-engineer-journey

./: README.md
learnings/01_basic_graph/: pyproject.toml  requirements.txt
learnings/01_simple_bot/: .env
learnings/01_simple_bot/app/agents/basic_bot/: basic_bot_graph.py
learnings/01_simple_bot/app/core/: config.py
projects/Basic Chatbot With Chat History/app/chatbot_agent/: basic_chatbot_graph.py
projects/Basic Chatbot With Chat History/app/core/: config.py
projects/Finance Agent/: .env.example  .gitignore  requirement.txt
projects/Finance Agent/app/: main.py
projects/Finance Agent/app/agent/: finance_agent_graph.py
projects/Finance Agent/app/api/: router.py
projects/Finance Agent/app/core/: config.py  db.py  llm.py
projects/Personal Expense Tracker/ai_backend_personal_finance_agent/: pyproject.toml  requirement.txt
projects/Personal Expense Tracker/ai_backend_personal_finance_agent/app/: main.py
projects/Personal Expense Tracker/ai_backend_personal_finance_agent/app/agent/: finance_agent_graph.py
projects/Personal Expense Tracker/ai_backend_personal_finance_agent/app/core/: config.py  db_utils.py  finance_state.py
projects/Personal Expense Tracker/frontend_personal_finance_advisor/: README.md  pubspec.yaml
projects/Personal Expense Tracker/frontend_personal_finance_advisor/linux/: CMakeLists.txt
projects/Personal Expense Tracker/frontend_personal_finance_advisor/web/: index.html  manifest.json
projects/Personal Expense Tracker/frontend_personal_finance_advisor/windows/: CMakeLists.txt
(+12 files in other folders)
