[project]
name = "ai-backend-personal-finance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.5",
    "pydantic-settings>=2.13.1",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
]
